--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ VERSION = "v1.0.0"
 # Copy and paste your API environment variable
 # =============================================
 
-CLOUDINARY_URL=cloudinary://457546737652791:KGjdCeVnZ3vAkMlhb15UAfJjTQw@dvaegokfq
+CLOUDINARY_URL=cloudinary://374415385272552:fKPof9VupRxFSmHkpeKe2hAfyjI@dnsmcvztb
